--- a/MailTest/.classpath
+++ b/MailTest/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/nhsal/Downloads/activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/nhsal/Downloads/javax.mail-1.4.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nhsal/Downloads/mysql-connector-java-8.0.20.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
