--- a/MailTest/.classpath
+++ b/MailTest/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/nhsal/git/TimeReminder/MailTest/activation-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/nhsal/git/TimeReminder/MailTest/javax.mail-1.4.7.jar"/>
+	<classpathentry kind="lib" path="./activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="./javax.mail-1.4.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
